--- a/ui/analyse/css/_round-training.scss
+++ b/ui/analyse/css/_round-training.scss
@@ -1,5 +1,5 @@
 .analyse__puzzle {
-  margin-top: $block-gap;
+  margin-top: $analyse-block-gap;
   a {
     @extend %flex-center-nowrap;
     text-transform: inherit;
@@ -59,13 +59,13 @@
   @include breakpoint($mq-col1) {
     flex-flow: row wrap;
     justify-content: center;
-    padding-bottom: $block-gap;
+    padding-bottom: $analyse-block-gap;
     border-bottom: $border;
     margin: 0;
 
     &__side {
-      flex: 0 0 calc(50% - #{$block-gap});
-      margin-#{$start-direction}: $block-gap;
+      flex: 0 0 calc(50% - #{$analyse-block-gap});
+      margin-#{$start-direction}: $analyse-block-gap;
     }
 
     > a {
