--- a/ui/analyse/css/practice/_layout.scss
+++ b/ui/analyse/css/practice/_layout.scss
@@ -1,7 +1,7 @@
 .analyse {
   .practice__side {
     grid-area: side;
-    margin-top: $block-gap;
+    margin-top: $analyse-block-gap;
   }
 
   &__acpl {
