--- a/ui/analyse/css/_layout.scss
+++ b/ui/analyse/css/_layout.scss
@@ -18,7 +18,7 @@ body {
   &__side {
     grid-area: side;
     justify-content: start;
-    margin: $block-gap;
+    margin: $analyse-block-gap;
   }
 
   &__board {
@@ -67,6 +67,10 @@ body {
     --chat-height: 0;
   }
 
+  .mchat {
+    margin: $analyse-block-gap 0 0 0;
+  }
+
   grid-template-rows: auto auto minmax(20em, 30vh);
   grid-template-areas:
     'board'
@@ -90,12 +94,11 @@ body {
       'uchat      .     side';
     grid-row-gap: 0;
 
-    &__side,
-    .mchat {
-      margin: $block-gap 0 0 0;
+    &__side {
+      margin: $analyse-block-gap 0 0 0;
     }
     .chat__members {
-      margin: calc($block-gap / 2) 0 0 0;
+      margin: calc($analyse-block-gap / 2) 0 0 0;
     }
 
     &__underboard {
