--- a/ui/ceval/css/_eval-gauge.scss
+++ b/ui/ceval/css/_eval-gauge.scss
@@ -1,10 +1,5 @@
-body {
-  @include fluid-size('--gauge-gap', 8px, 17px);
-}
-$analyse-block-gap: var(--gauge-gap);
-
 .eval-gauge {
-  width: var(--gauge-gap);
+  width: $block-gap-half;
   position: relative;
   background: if($theme-light, #fff, #a0a0a0);
   overflow: hidden;
