fix broadcast chat margin on game page

--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -107,6 +107,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
       display: flex;
     }
     .mchat {
+      margin-top: $analyse-block-gap;
       flex: 5 0 30%;
     }
   }
