--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -1,6 +1,7 @@
 $mq-col3-side-height: calc(100vh - #{$site-header-outer-height} - #{$col1-uniboard-controls});
 
 body {
+  --site-header-margin: 1em;
   --allow-video: false;
 
   @include breakpoint($mq-col3) {
