--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -5,6 +5,11 @@ $hover-bg: mix($c-primary, $c-bg-box, 30%);
   background: $c-bg-box;
   &__side {
     @extend %flex-column;
+    &__preload {
+      @extend %box-neat;
+      flex: 1;
+      background: $c-bg-box;
+    }
     &__header {
       @extend %flex-center-nowrap, %box-radius-top;
       user-select: none;
@@ -108,7 +113,6 @@ $hover-bg: mix($c-primary, $c-bg-box, 30%);
       line-height: 0;
       img {
         width: 100%;
-        aspect-ratio: 2/1;
         @include broken-img(2 / 1);
       }
       text-align: center;
