--- a/ui/pagelets/css/user/_sub-rating.scss
+++ b/ui/pagelets/css/user/_sub-rating.scss
@@ -98,7 +98,7 @@
     font-size: 1.2em;
   }
 
-  @media (max-width: at-most($medium)) {
+  @include mq-topnav-hidden {
     a {
       padding: 0.3em;
     }
