--- a/ui/common/css/abstract/_mixins.scss
+++ b/ui/common/css/abstract/_mixins.scss
@@ -86,6 +86,31 @@
   -webkit-backdrop-filter: blur($size);
 }
 
+@mixin topnav-unsticky {
+  #top {
+    position: relative;
+    max-width: 1800px;
+    top: unset;
+    padding: 0;
+    width: unset;
+    background: unset;
+    border-bottom: unset;
+    transform: unset;
+    --site-header-sticky-padding: 0px;
+
+    #topnav,
+    .dropdown {
+      opacity: unset;
+      visibility: unset;
+      pointer-events: unset;
+      transition: unset;
+    }
+  }
+  #main-wrap {
+    margin-top: $site-header-margin;
+  }
+}
+
 @mixin broken-img($aspect-ratio) {
   display: block;
   position: relative;
