--- a/ui/common/css/header/_title.scss
+++ b/ui/common/css/header/_title.scss
@@ -1,42 +1,59 @@
 .site-title {
-  @extend %base-font;
-
+  @extend %base-font, %flex-center-nowrap;
+  padding: 0 1rem;
+  margin-#{$start-direction}: 0.5rem;
+  gap: 0.75rem;
   font-size: 25px;
-  line-height: #{$site-header-short-height - 3};
+  transform: translateY(-3px);
   text-shadow: $text-shadow;
-  white-space: nowrap;
-  margin: 0 0.5rem;
-  display: none;
-
-  @media (min-width: at-least($xx-small)) {
-    display: block;
-  }
+  color: $c-font;
 
   @include mq-topnav-hidden {
-    /* move away from hamburger */
-    margin-#{$start-direction}: calc(0.5rem + #{$site-header-height});
+    margin-#{$start-direction}: calc(0.5rem + $site-header-height);
   }
 
   @include mq-site-header-tall {
     font-size: 30px;
-    line-height: #{$site-header-tall-height - 3};
   }
 
-  @include mq-topnav-visible-and-tall {
-    line-height: #{$site-header-tall-height - 5};
-    margin: 0 1rem 0 1.5rem;
+  &:hover {
+    color: $c-primary;
+
+    span {
+      color: $c-primary-dim;
+    }
   }
 
-  a {
-    color: $c-font;
-    text-decoration: none;
+  .site-name {
+    display: none;
+  }
 
-    &:hover {
-      color: $c-primary;
+  .site-icon {
+    font-size: 24px;
+    @media (min-height: at-least($tall)) {
+      font-size: 36px;
+    }
+    display: none;
+  }
 
-      span {
-        color: $c-primary-dim;
-      }
+  @media (min-width: at-least($xx-small)) {
+    .site-icon {
+      display: block;
+    }
+  }
+
+  @media (min-width: at-least(1180px)) {
+    .site-name {
+      display: block;
+    }
+    .site-icon {
+      display: none;
+    }
+  }
+
+  @media (min-width: at-least($xx-large)) {
+    .site-icon {
+      display: block;
     }
   }
 
