--- a/ui/common/css/header/_topnav-hidden.scss
+++ b/ui/common/css/header/_topnav-hidden.scss
@@ -101,6 +101,7 @@
   }
 
   #topnav {
+    @include back-blur(6px);
     display: flex;
     flex-flow: row wrap;
     position: fixed;
@@ -108,9 +109,9 @@
     bottom: 0;
     #{$start-direction}: 0;
     background: $c-bg-high;
-    transform: translateX(calc(-100% * #{$transform-direction} - 10px * #{$transform-direction}));
 
-    @include transition(transform, 200ms);
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 200ms;
 
     padding-bottom: 1.2rem;
     overflow-y: auto;
@@ -118,6 +119,10 @@
     box-shadow: 2px 5px 7px hsla(0, 0, 0%, 0.5);
     border-radius: 0 3px 0 0;
     max-width: 80%;
+
+    @include mq-safari {
+      min-height: 75vh; // safari has funny ideas about fixed parents bounding fixed children
+    }
 
     @media (min-width: at-least($xx-small)) {
       max-width: 70%;
@@ -165,8 +170,7 @@
     }
 
     .topnav-toggle:checked ~ & {
-      transform: translateX(0);
-
+      clip-path: inset(0 0 0 0);
       a {
         opacity: 1;
         transition: opacity 125ms ease-in-out 125ms;
