--- a/ui/common/css/layout/_base.scss
+++ b/ui/common/css/layout/_base.scss
@@ -3,18 +3,19 @@ $vp-max-width: 1200px;
 
 body {
   --site-header-height: #{$site-header-short-height};
+  --site-header-margin: 0px;
+  --site-header-sticky-padding: calc((100vw - #{$site-header-sticky-max-width}) / 2);
+  --main-margin: 0px;
+  --sticky-gap: 0px;
 
   @include mq-site-header-tall {
     --site-header-height: #{$site-header-tall-height};
+    --sticky-gap: 1.5vmin;
   }
-
-  --site-header-margin: 0px;
 
   &.header-margin {
     --site-header-margin: 1em;
   }
-
-  --main-margin: 0;
 
   @media (min-width: at-least($small)) {
     --main-margin: 1vw;
@@ -25,8 +26,13 @@ body {
 #main-wrap {
   display: grid;
   grid-template-areas: '. . main . .';
-  --main-max-width: #{$main-max-width};
   grid-template-columns: $main-margin 1fr minmax(auto, var(--main-max-width)) 1fr $main-margin;
+  --main-max-width: #{$main-max-width};
+  margin-top: $site-header-margin;
+
+  @include mq-sticky-header {
+    margin-top: $site-header-outer-height;
+  }
 
   &.full-screen {
     --main-max-width: auto;
@@ -35,8 +41,6 @@ body {
   &.full-screen-force {
     --main-max-width: 100%;
   }
-
-  margin-top: $site-header-margin;
 
   @media (hover: none) {
     body.clinput & {
