--- a/ui/common/css/header/_header.scss
+++ b/ui/common/css/header/_header.scss
@@ -21,12 +21,24 @@ body > header {
     top: 0;
     width: 100%;
     padding: 0 var(--site-header-sticky-padding);
-    transition: transform $transition-duration ease-in-out;
+    transition:
+      transform $transition-duration ease-in-out,
+      border-color $transition-duration ease-in-out;
 
     @if $theme == 'transp' {
       @include back-blur(6px);
       background: hsla(0, 0, 60%, 0.14);
     } @else {
+      @if $theme == 'dark' {
+        &.scrolled {
+          border-color: black;
+        }
+      } @else {
+        &.scrolled {
+          border-color: hsl(0, 0%, 70%);
+        }
+      }
+      border-bottom: 1px solid mix($c-body-gradient, $c-bg-page, 50%);
       background-image: linear-gradient(
         to bottom,
         $c-body-gradient,
