--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -82,7 +82,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
     display: none;
   }
   @include mq-at-least-col2 {
-    grid-template-rows: calc(var(--cg-height) / 2) calc(var(--cg-height) / 2) 2.5em;
+    grid-template-rows: var(--cg-height) 2.5em;
     grid-template-areas:
       'board        gauge side'
       'board        gauge tools'
@@ -94,12 +94,43 @@ main.analyse.is-relay:not(.has-relay-tour) {
     }
   }
   @include mq-at-least-col3 {
-    grid-template-rows: var(--cg-height) 2.5em;
     grid-template-areas:
       'side           . board gauge tools'
       'side           . board .     controls'
       'side           . under under under'
       'relay-admin    . under under under';
+
+    &.ultra-wide {
+      grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap 1fr 1fr;
+      grid-template-areas:
+        'side           . board gauge tools chat'
+        'side           . board .     controls uchat'
+        'side           . under under under under'
+        'relay-admin    . under under under under';
+      .mchat,
+      .chat__members {
+        margin-top: 0;
+        margin-#{$start-direction}: $analyse-block-gap;
+      }
+      #video-player-placeholder {
+        grid-area: video;
+        height: 100%;
+      }
+      &.with-video {
+        grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em;
+        grid-template-areas:
+          'side          . board gauge video video'
+          'side           . board gauge tools chat'
+          'side           . board .     controls uchat'
+          'side           . under under under under'
+          'relay-admin    . under under under under';
+        .analyse__tools,
+        .mchat {
+          margin-top: $analyse-block-gap;
+        }
+      }
+    }
+
     .relay-tour__side {
       max-height: $mq-col3-side-height;
     }
