--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -94,6 +94,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
     }
   }
   @include mq-at-least-col3 {
+    grid-template-rows: var(--cg-height) 2.5em;
     grid-template-areas:
       'side           . board gauge tools'
       'side           . board .     controls'
@@ -117,7 +118,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
         height: 100%;
       }
       &.with-video {
-        grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em;
+        grid-template-rows: calc(var(--cg-height) * 9 / 16) calc(var(--cg-height) * 7 / 16) 2.5em;
         grid-template-areas:
           'side          . board gauge video video'
           'side           . board gauge tools chat'
@@ -127,6 +128,19 @@ main.analyse.is-relay:not(.has-relay-tour) {
         .analyse__tools,
         .mchat {
           margin-top: $analyse-block-gap;
+        }
+        &.tiny-board {
+          grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em;
+          grid-template-areas:
+            'side          . board gauge tools video'
+            'side           . board gauge tools chat'
+            'side           . board .     controls uchat'
+            'side           . under under under under'
+            'relay-admin    . under under under under';
+          #video-player-placeholder {
+            margin-#{$start-direction}: $analyse-block-gap;
+            height: 100%;
+          }
         }
       }
     }
