--- a/ui/lobby/css/_layout.scss
+++ b/ui/lobby/css/_layout.scss
@@ -16,7 +16,11 @@
   &__winners {
     min-height: 20em;
   }
-
+  //sets min height when we disable Show player ratings and there is only Tournament winners box to display
+  &__wide-winners {
+    min-height: 20em;
+  }
+  
   @include mq-at-least-col2 {
     --cols: 2; // ui/lobby/src/main.ts
     grid-template-columns: repeat(2, 1fr);
