--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -44,9 +44,11 @@ main.is-relay.has-relay-tour {
   }
 
   @include mq-at-least-col2 {
-    grid-template-rows: 80vh;
+    grid-template-rows: 50vh 30vh;
     grid-template-areas:
       'relay-tour . side'
+      'relay-tour . chat'
+      'relay-tour . uchat'
       'relay-tour . relay-admin';
     .mchat {
       margin-top: $analyse-block-gap;
@@ -59,9 +61,14 @@ main.is-relay.has-relay-tour {
 
   @include mq-at-least-col3 {
     grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap $col3-uniboard-table;
-    grid-template-rows: $mq-col3-side-height;
+    &.wide {
+      grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap auto;
+    }
+    grid-template-rows: repeat(2, $mq-col3-side-height / 2);
     grid-template-areas:
       'side        . relay-tour relay-tour relay-tour'
+      'chat        . relay-tour relay-tour relay-tour'
+      'uchat       . relay-tour relay-tour relay-tour'
       'relay-admin . relay-tour relay-tour relay-tour';
   }
 }
@@ -77,89 +84,103 @@ main.analyse.is-relay:not(.has-relay-tour) {
     'side'
     'relay-admin'
     'under';
+
   .mchat,
   .chat__members {
     display: none;
   }
+
   @include mq-at-least-col2 {
-    grid-template-rows: calc(var(--cg-height) / 2) calc(var(--cg-height) / 2) 2.5em;
+    grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em;
     grid-template-areas:
-      'board        gauge side'
-      'board        gauge tools'
-      'board        .     controls'
-      'under        under under'
-      'relay-admin  .     .';
+      'board       gauge side'
+      'board       gauge tools'
+      'board       .     controls'
+      'under       under under'
+      'relay-admin .     .';
+
     .analyse__underboard {
       margin-top: unset;
     }
   }
+
   @include mq-at-least-col3 {
     grid-template-rows: var(--cg-height) 2.5em;
     grid-template-areas:
-      'side           . board gauge tools'
-      'side           . board .     controls'
-      'side           . under under under'
-      'relay-admin    . under under under';
+      'side        . board gauge tools'
+      'side        . board .     controls'
+      'chat        . under under under'
+      'uchat       . under under under'
+      'relay-admin . under under under';
 
-    &.ultra-wide {
+    .relay-tour__side {
+      max-height: $mq-col3-side-height;
+    }
+
+    .mchat,
+    .chat__members {
+      display: flex;
+    }
+
+    .mchat {
+      margin-top: $analyse-block-gap;
+      flex: 5 0 30%;
+    }
+
+    // wide is a class not a media query as it involes the queryBody() calculation in relayView.ts
+    &.wide {
       grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap 1fr 1fr;
       grid-template-areas:
-        'side           . board gauge tools chat'
-        'side           . board .     controls uchat'
-        'side           . under under under under'
-        'relay-admin    . under under under under';
+        'side        . board gauge tools    chat'
+        'side        . board .     controls uchat'
+        'side        . under under under    under'
+        'relay-admin . under under under    under';
+
       .mchat,
       .chat__members {
         margin-top: 0;
         margin-#{$start-direction}: $analyse-block-gap;
       }
+
       #video-player-placeholder {
         grid-area: video;
         height: 100%;
       }
-      &.with-video {
-        grid-template-rows: calc(var(--cg-height) * 9 / 16) calc(var(--cg-height) * 7 / 16) 2.5em;
-        grid-template-areas:
-          'side          . board gauge video video'
-          'side           . board gauge tools chat'
-          'side           . board .     controls uchat'
-          'side           . under under under under'
-          'relay-admin    . under under under under';
-        .analyse__tools,
-        .mchat {
-          margin-top: $analyse-block-gap;
-        }
-        &.tiny-board {
-          grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em;
-          grid-template-areas:
-            'side          . board gauge tools video'
-            'side           . board gauge tools chat'
-            'side           . board .     controls uchat'
-            'side           . under under under under'
-            'relay-admin    . under under under under';
-          .analyse__tols {
-            margin-top: 0;
-          }
-          #video-player-placeholder {
-            margin-#{$start-direction}: $analyse-block-gap;
-            height: 100%;
-          }
-        }
+    }
+
+    &.wide.with-video {
+      grid-template-rows: calc(var(--cg-height) * 9 / 16) calc(var(--cg-height) * 7 / 16) 2.5em;
+      grid-template-areas:
+        'side        . board gauge video    video'
+        'side        . board gauge tools    chat'
+        'side        . board .     controls uchat'
+        'side        . under under under    under'
+        'relay-admin . under under under    under';
+
+      .analyse__tools,
+      .mchat {
+        margin-top: $analyse-block-gap;
       }
     }
 
-    .relay-tour__side {
-      max-height: $mq-col3-side-height;
-    }
-    .mchat,
-    .chat__members {
-      display: flex;
-    }
-    .mchat {
-      margin-top: $analyse-block-gap;
-      flex: 5 0 30%;
+    &.wide.with-video.tiny-board {
+      grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em;
+      grid-template-areas:
+        'side        . board gauge tools    video'
+        'side        . board gauge tools    chat'
+        'side        . board .     controls uchat'
+        'side        . under under under    under'
+        'relay-admin . under under under    under';
+      .analyse__tols {
+        margin-top: 0;
+      }
+
+      #video-player-placeholder {
+        margin-#{$start-direction}: $analyse-block-gap;
+      }
     }
   }
+
   .eval-chart-and-training {
     @extend %flex-center-nowrap;
     gap: $analyse-block-gap;
