tweak dasher border radius for solid header

--- a/ui/dasher/css/_dasher.scss
+++ b/ui/dasher/css/_dasher.scss
@@ -5,6 +5,10 @@
 #dasher_app {
   @extend %box-radius-left;
 
+  #top.scrolled & {
+    border-radius: 0 0 0 $box-radius-size;
+  }
+
   width: 225px;
 
   .spinner {
