uniform brightness for account icon (mainly a light mode concern)

--- a/ui/common/css/header/_buttons.scss
+++ b/ui/common/css/header/_buttons.scss
@@ -135,6 +135,7 @@
 
   &::after {
     @extend %data-icon;
+    color: c-dimmer($c-font, 15%);
     content: $licon-AccountCircle;
     font-size: 2rem;
   }
