Full comms export: add button + confirm + handler
TODO: perm + modlog + zulip message

--- a/ui/pagelets/css/mod/_communication.scss
+++ b/ui/pagelets/css/mod/_communication.scss
@@ -19,6 +19,9 @@
       margin-#{$start-direction}: 1em;
       font-weight: normal;
     }
+    .comms-export {
+      margin-#{$start-direction}: 1em;
+    }
   }
 
   h2 {
