--- a/ui/analyse/css/_action-menu.scss
+++ b/ui/analyse/css/_action-menu.scss
@@ -6,11 +6,8 @@
   // 0 size forces vertical scrollbar
   display: flex;
   flex-flow: column;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: auto;
   padding: $analyse-block-gap;
-  align-items: stretch;
-  width: 100%;
 
   h2 {
     font-size: 1em;
@@ -89,6 +86,7 @@
 
   .setting {
     @extend %flex-center-nowrap;
+
     flex: 0 0 auto;
     margin-top: $analyse-block-gap;
 
